fix for GROOVY-2582. Allows a covariant super method to implement an actual interface method
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@14261 a5544e8c-8a19-0410-ba12-f9af4593a198